apps/apeksha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apeksha
  labels:
    app.kubernetes.io/part-of: apeksha
