apps/apeksha/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apeksha-api
  labels:
    app.kubernetes.io/name: apeksha-api-ingress
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apekshaapi.thatinsaneguy.com
      secretName: apeksha-api-tls
  rules:
    - host: apekshaapi.thatinsaneguy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apeksha-api
                port:
                  number: 9201
