apps/apeksha/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apeksha-ui
  labels:
    app.kubernetes.io/name: apeksha-ui-ingress
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apeksha.thatinsaneguy.com
      secretName: apeksha-tls
  rules:
    - host: apeksha.thatinsaneguy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apeksha-ui
                port:
                  number: 9200
